zetasql/analyzer/testdata/alter_column_set_options.test
[default language_features=MAXIMUM,+ALTER_VIEWS_ALTER_COLUMN_SET_OPTIONS,+ALTER_MATERIALIZED_VIEW_ALTER_COLUMN_SET_OPTIONS]
alter {{table|view|materialized view|model}} KeyValue alter column key set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")
--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")
--
ALTERNATION GROUP: model
--
ERROR: ALTER MODEL does not support ALTER COLUMN SET OPTIONS [at 1:22]
alter model KeyValue alter column key set options (description="new descripti...
                     ^

==

alter {{table|view|materialized view}} if exists KeyValue alter column key set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE
--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

==

alter {{table|view|materialized view}} KeyValue alter column key set options (description="description1"), alter column value set options(description="description2");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
  | +-column="key"
  | +-option_list=
  |   +-description := Literal(type=STRING, value="description1")
  +-AlterColumnOptionsAction
    +-column="value"
    +-option_list=
      +-description := Literal(type=STRING, value="description2")
--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
  | +-column="key"
  | +-option_list=
  |   +-description := Literal(type=STRING, value="description1")
  +-AlterColumnOptionsAction
    +-column="value"
    +-option_list=
      +-description := Literal(type=STRING, value="description2")
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
  | +-column="key"
  | +-option_list=
  |   +-description := Literal(type=STRING, value="description1")
  +-AlterColumnOptionsAction
    +-column="value"
    +-option_list=
      +-description := Literal(type=STRING, value="description2")

==

alter {{table|view|materialized view}} KeyValue alter column not_a_column set options (description="new description");
--
ALTERNATION GROUP: table

--

ERROR: Column not found: not_a_column [at 1:35]
alter table KeyValue alter column not_a_column set options (description="new ...
                                  ^
--
ALTERNATION GROUP: view
--

ERROR: Column not found: not_a_column [at 1:34]
alter view KeyValue alter column not_a_column set options (description="new d...
                                 ^
--
ALTERNATION GROUP: materialized view
--

ERROR: Column not found: not_a_column [at 1:47]
alter materialized view KeyValue alter column not_a_column set options (descr...
                                              ^

==

alter {{table|view|materialized view}} not_a_table alter column not_a_column set options (description="new description");
--
ALTERNATION GROUP: table

--

ERROR: Table not found: not_a_table [at 1:13]
alter table not_a_table alter column not_a_column set options (description="n...
            ^
--
ALTERNATION GROUP: view
--
ERROR: Table not found: not_a_table [at 1:12]
alter view not_a_table alter column not_a_column set options (description="ne...
           ^
--
ALTERNATION GROUP: materialized view
--
ERROR: Table not found: not_a_table [at 1:25]
alter materialized view not_a_table alter column not_a_column set options (de...
                        ^

==

alter {{table|view|materialized view}} if exists KeyValue alter column not_a_column set options (description="new description");
--
ALTERNATION GROUP: table

--

ERROR: Column not found: not_a_column [at 1:45]
alter table if exists KeyValue alter column not_a_column set options (descrip...
                                            ^
--
ALTERNATION GROUP: view
--

ERROR: Column not found: not_a_column [at 1:44]
alter view if exists KeyValue alter column not_a_column set options (descript...
                                           ^
--
ALTERNATION GROUP: materialized view
--

ERROR: Column not found: not_a_column [at 1:57]
...materialized view if exists KeyValue alter column not_a_column set options...
                                                     ^

==

alter {{table|view|materialized view}} KeyValue alter column if exists key set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

==

alter {{table|view|materialized view}} KeyValue alter column if exists not_a_column set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="not_a_column"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="not_a_column"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-is_if_exists=TRUE
    +-column="not_a_column"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")

==

alter {{table|view|materialized view}} if exists KeyValue alter column if exists key set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

==

alter {{table|view|materialized view}} if exists KeyValue alter column if exists not_a_column set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="not_a_column"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="not_a_column"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="not_a_column"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

==

alter {{table|view|materialized view}} if exists not_a_table alter column if exists key set options (description="new description");
--
ALTERNATION GROUP: table

--
AlterTableStmt
+-name_path=not_a_table
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

--
ALTERNATION GROUP: view
--
AlterViewStmt
+-name_path=not_a_table
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE
--
ALTERNATION GROUP: materialized view
--
AlterMaterializedViewStmt
+-name_path=not_a_table
+-alter_action_list=
| +-AlterColumnOptionsAction
|   +-is_if_exists=TRUE
|   +-column="key"
|   +-option_list=
|     +-description := Literal(type=STRING, value="new description")
+-is_if_exists=TRUE

==

# Alter view alter column set options with ALTER_VIEWS_ALTER_COLUMN_SET_OPTIONS enabled/disabled.
[language_features=NONE,{{+ALTER_VIEWS_ALTER_COLUMN_SET_OPTIONS|}}]
alter view KeyValue alter column key set options (description="new description");
--
ALTERNATION GROUP: +ALTER_VIEWS_ALTER_COLUMN_SET_OPTIONS

--
AlterViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")
--
ALTERNATION GROUP: <empty>
--
ERROR: ALTER VIEW does not support ALTER COLUMN SET OPTIONS [at 1:21]
alter view KeyValue alter column key set options (description="new descriptio...
                    ^

==

# Alter materialized view alter column set options with ALTER_MATERIALIZED_VIEW_ALTER_COLUMN_SET_OPTIONS enabled/disabled.
[language_features=NONE,{{+ALTER_MATERIALIZED_VIEW_ALTER_COLUMN_SET_OPTIONS|}}]
alter materialized view KeyValue alter column key set options (description="new description");
--
ALTERNATION GROUP: +ALTER_MATERIALIZED_VIEW_ALTER_COLUMN_SET_OPTIONS

--
AlterMaterializedViewStmt
+-name_path=KeyValue
+-alter_action_list=
  +-AlterColumnOptionsAction
    +-column="key"
    +-option_list=
      +-description := Literal(type=STRING, value="new description")
--
ALTERNATION GROUP: <empty>
--
ERROR: ALTER MATERIALIZED VIEW does not support ALTER COLUMN SET OPTIONS [at 1:34]
alter materialized view KeyValue alter column key set options (description="n...
                                 ^

==

[disallow_duplicate_options]
alter {{table|view|materialized view|model}} KeyValue alter column key set options (description="new description", description="duplicate description");

--
ALTERNATION GROUP: table
--
ERROR: Duplicate option specified for 'description' [at 1:83]
...key set options (description="new description", description="duplicate des...
                                                   ^
--
ALTERNATION GROUP: view
--
ERROR: Duplicate option specified for 'description' [at 1:82]
...key set options (description="new description", description="duplicate des...
                                                   ^
--
ALTERNATION GROUP: materialized view
--
ERROR: Duplicate option specified for 'description' [at 1:95]
...key set options (description="new description", description="duplicate des...
                                                   ^
--
ALTERNATION GROUP: model
--
ERROR: ALTER MODEL does not support ALTER COLUMN SET OPTIONS [at 1:22]
alter model KeyValue alter column key set options (description="new descripti...
                     ^
